dark mode discover - figcaption background fix

--- a/chamber/styles/normal.css
+++ b/chamber/styles/normal.css
@@ -97,4 +97,7 @@
     display: block;
     margin: auto;
   }
+  figcaption{
+    background-color: whitesmoke;
+  }
 }
